added recipe summary

--- a/src/recipe-list/recipe-list.component.html
+++ b/src/recipe-list/recipe-list.component.html
@@ -1,11 +1,5 @@
 <h1>This is the list of all available recipes</h1>
 
 <div *ngFor='let recipe of recipes' class='recipe card' style='width: 500px;margin-bottom:10px'>
-<h5 class='card-header'>{{recipe.title}}</h5>
-<div class='card-body'>
-  <div style='float:right'>
-    <img src="{{this.recipe.cover_photo ? this.recipe.cover_photo: '/assets/emptybowl.jpg'}}" style='width: 150px; height: 150px; margin: 5px'/>
-  </div>
-  <p>{{recipe.description}}</p>
-</div>
+<app-recipe-summary [recipe]='recipe'></app-recipe-summary>
 </div>
